--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,8 @@ a {
   color: white;
   /* changes here */
   /* background: linear-gradient(#0b004e, #1d152f, #002834); */
-  background: linear-gradient(#ff4e50, #f9d423);
+  background: linear-gradient(180deg, #fd7f01 , #fd6601 30%, #fd4401);
+
+
 
 }
-
-
-
