--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,9 @@
 .footer {
+  color: #ffffff;          /* Light gray text for contrast */
   text-align: center;
   margin: auto;
   max-width: 80%;
-  border-top: 1px solid #989898;
+  border-top: 1px solid #ffffff;
   padding: 15px 0px;
   font-size: 13px;
 }
